feat: Rename project to TaskManager and update package.json
feat: Add report routes for task and user reports

feat: Enhance task update functionality with additional fields and validation

feat: Implement task deletion with proper error handling

feat: Add dashboard data aggregation for overall task statistics

feat: Improve user-specific dashboard data retrieval

fix: Correct task model to support multiple assigned users

feat: Add checklist update functionality with progress tracking

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gym-backend-main",
+  "name": "TaskManager-backend",
   "version": "1.0.0",
-  "description": "gym ERP main backend source code dev_1",
+  "description": "TaskManager backend source code dev_1",
   "keywords": [
     "javascript"
   ],
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
